--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "faker": "^6.6.6",
+    "flowbite": "^1.8.1",
+    "flowbite-vue": "^0.0.17",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@faker-js/faker": "^8.1.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   },
   "eslintConfig": {
