--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
     "core-js": "^3.8.3",
     "faker": "^6.6.6",
     "flowbite": "^1.8.1",
     "flowbite-vue": "^0.0.17",
+    "tw-elements": "^1.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "yup": "^1.3.2"
