--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tw-elements": "^1.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuex": "^4.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
